--- a/public/paper/index.html
+++ b/public/paper/index.html
@@ -186,9 +186,9 @@
     <meta property="twitter:site" content="@GetResearchDev" />
     <meta property="twitter:creator" content="@GetResearchDev" />
   
-  <meta property="og:site_name" content="Hugo Academic CV Theme" />
+  <meta property="og:site_name" content="Nathalie Römer" />
   <meta property="og:url" content="http://localhost:1313/paper/" />
-  <meta property="og:title" content="Research | Hugo Academic CV Theme" />
+  <meta property="og:title" content="Research | Nathalie Römer" />
   <meta property="og:description" content="Working papers
 
 Effects of written self-promotions on gender bias and decision quality (with Marina Schröder)
@@ -300,7 +300,7 @@ policies.
   
 
 
-  <title>Research | Hugo Academic CV Theme</title>
+  <title>Research | Nathalie Römer</title>
 
   
   
@@ -521,7 +521,7 @@ policies.
   <nav class="navbar px-3 flex justify-left">
     <div class="order-0 h-100">
       
-      <a class="navbar-brand" href="/" title="Hugo Academic CV Theme">
+      <a class="navbar-brand" href="/" title="Nathalie Römer">
         Nathalie Römer
       </a>
     </div>
