--- a/public/talk/index.html
+++ b/public/talk/index.html
@@ -189,9 +189,9 @@
     <meta property="twitter:site" content="@GetResearchDev" />
     <meta property="twitter:creator" content="@GetResearchDev" />
   
-  <meta property="og:site_name" content="Hugo Academic CV Theme" />
+  <meta property="og:site_name" content="Nathalie Römer" />
   <meta property="og:url" content="http://localhost:1313/talk/" />
-  <meta property="og:title" content="Prior &amp; Upcoming Talks | Hugo Academic CV Theme" />
+  <meta property="og:title" content="Prior &amp; Upcoming Talks | Nathalie Römer" />
   <meta property="og:description" content="2024
 GfeW (Cologne)
 2023
@@ -215,7 +215,7 @@ Economics: Gender Economics (Berlin)" /><meta property="og:image" content="http:
   
 
 
-  <title>Prior &amp; Upcoming Talks | Hugo Academic CV Theme</title>
+  <title>Prior &amp; Upcoming Talks | Nathalie Römer</title>
 
   
   
@@ -436,7 +436,7 @@ Economics: Gender Economics (Berlin)" /><meta property="og:image" content="http:
   <nav class="navbar px-3 flex justify-left">
     <div class="order-0 h-100">
       
-      <a class="navbar-brand" href="/" title="Hugo Academic CV Theme">
+      <a class="navbar-brand" href="/" title="Nathalie Römer">
         Nathalie Römer
       </a>
     </div>
