--- a/public/paper/index.html
+++ b/public/paper/index.html
@@ -842,10 +842,7 @@ policies.
       </li></ul>
 
   
-  
-    
-    
-  
+  __hdeferred/26d38cbb9a78aeea_107__d=
 
 
 
@@ -1272,10 +1269,3 @@ policies.
 
 
 
-
-
-
-
-
-  </body>
-</html>
