--- a/public/index.html
+++ b/public/index.html
@@ -790,9 +790,8 @@
     
     <div class="pt-2 justify-content-center prose prose-slate dark:prose-invert">
       <div class="bio-text" >
-        <h2 id="about-me">About Me</h2>
-<div style="font-size: calc(1em * 1.4) !important">
-I'm PhD student at Leibniz University Hannover. I use empirical methods to study distortions emerging in the generation and evaluation of innovative ideas, with a focus on diversity and gender bias. I employ <a href="/wit/">innovative experimental designs</a> in large-scale experiments. <a href="/paper/">My research</a> offers guidance for organizations and policy makers on designing incentives and decision-making processes to foster innovation.</div>
+        <div style="font-size: calc(1em * 1.4) !important">
+Hi, I'm PhD student at Leibniz University Hannover. I use empirical methods to study distortions emerging in the generation and evaluation of innovative ideas, with a focus on diversity and gender bias. I employ <a href="/wit/">innovative experimental designs</a> in large-scale experiments. <a href="/paper/">My research</a> offers guidance for organizations and policy makers on designing incentives and decision-making processes to foster innovation.</div>
 <br>
       </div>
     </div>
