--- a/public/project/index.html
+++ b/public/project/index.html
@@ -41,7 +41,7 @@
   
     
   
-  <meta name="description" content="The highly-customizable Hugo Academic theme powered by Hugo Blox Builder. Easily create your personal academic website." />
+  <meta name="description" content="Hi, I am Nathalie Römer, PhD researcher at Leibniz University Hannover. I empirically study behavior in innovation-related contexts with a focus on diversity and gender bias." />
 
   
   <link rel="alternate" hreflang="en-us" href="http://localhost:1313/project/" />
@@ -191,7 +191,7 @@
   <meta property="og:site_name" content="Nathalie Römer" />
   <meta property="og:url" content="http://localhost:1313/project/" />
   <meta property="og:title" content="Projects | Nathalie Römer" />
-  <meta property="og:description" content="The highly-customizable Hugo Academic theme powered by Hugo Blox Builder. Easily create your personal academic website." /><meta property="og:image" content="http://localhost:1313/media/icon_hu10454897060370735412.png" />
+  <meta property="og:description" content="Hi, I am Nathalie Römer, PhD researcher at Leibniz University Hannover. I empirically study behavior in innovation-related contexts with a focus on diversity and gender bias." /><meta property="og:image" content="http://localhost:1313/media/icon_hu10454897060370735412.png" />
     <meta property="twitter:image" content="http://localhost:1313/media/icon_hu10454897060370735412.png" /><meta property="og:locale" content="en-us" />
   
     
