--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!-- This site was created with Hugo Blox. https://hugoblox.com -->
-<!-- Last Published: November 20, 2024 --><html lang="en-us" dir="ltr"
+<!-- Last Published: November 21, 2024 --><html lang="en-us" dir="ltr"
       data-wc-theme-default="system">
   
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
@@ -892,7 +892,7 @@
     
     <div class="pt-2 justify-content-center prose prose-slate dark:prose-invert">
       <div class="bio-text" >
-        <div style="font-size: calc(1em * 1.4) !important">
+        <div style="font-size: calc(1em * 1.2) !important">
 Hi, I'm PhD student at Leibniz University Hannover. I use empirical methods to study distortions emerging in the generation and evaluation of innovative ideas, with a focus on diversity and gender bias. I employ <a href="/wit/">innovative experimental designs</a> in large-scale experiments. <a href="/paper/">My research</a> offers guidance for organizations and policy makers on designing incentives and decision-making processes to foster innovation.</div>
 <br>
       </div>
@@ -1105,19 +1105,19 @@ Hi, I'm PhD student at Leibniz University Hannover. I use empirical methods to s
   
   <div class="prose prose-slate lg:prose-xl dark:prose-invert max-w-prose"><h4 id="working-papers">Working papers</h4>
 <ul>
-<li>Effects of written self-promotions on gender bias and decision quality (with <a href="https://www.inec.uni-hannover.de/de/schroeder" target="_blank" rel="noopener">Marina Schröder</a>)<details class="spoiler "  id="spoiler-0">
+<li>Effects of written self-promotions on gender bias and decision quality (with <a href="https://www.inec.uni-hannover.de/de/schroeder" target="_blank" rel="noopener">Marina Schröder</a>)<a href="/uploads/SelfPromotion_RoemerSchroederNov2024.pdf">[pdf]</a><details class="spoiler "  id="spoiler-0">
   <summary class="cursor-pointer">Abstract</summary>
   <div class="rounded-lg bg-neutral-50 dark:bg-neutral-800 p-2">
     Written self-promotion is crucial in numerous decision-making scenarios, including job applications,
 securing funds for start-ups, or academic grant proposals. In two experiments, we study the effects
-of written self-promotions agents provide to decision-makers on decision quality and gender bias. We
+of self-promotions written by applicants on decision-makers, focusing on decision quality and gender bias.
 show that providing such self-promotions slightly improves decision quality. Concerning gender bias, we
 find that self-promotions do not induce a gender bias that harms women. Moreover, the provision of selfpromotions
 can even eliminate pre-existing gender bias when no other performance signals are available.
   </div>
 </details></li>
 <li>Piece-rate incentives and idea generation - An experimental analysis (with Katharina Laske and <a href="https://www.inec.uni-hannover.de/de/schroeder" target="_blank" rel="noopener">Marina Schröder</a>)
-<a href="https://github.com/nathalieroemer/WIT.git" target="_blank" rel="noopener">Link to the word illustration task (WIT)</a><details class="spoiler "  id="spoiler-1">
+<a href="/wit/">Link to the word illustration task (WIT)</a><a href="/uploads/IncentivesForIdeas_LaskeRoemerSchroeder.pdf">[pdf]</a><details class="spoiler "  id="spoiler-1">
   <summary class="cursor-pointer">Abstract</summary>
   <div class="rounded-lg bg-neutral-50 dark:bg-neutral-800 p-2">
     Understanding how organizational design affects idea generation is key to fostering innovation.
@@ -1132,7 +1132,7 @@ the effect of PR incentives on idea generation.
 <li>A single voice is not enough: Evidence on female representation on expert panels in startup pitching contests (with <a href="https://www.zhaw.ch/de/ueber-uns/person/blah/" target="_blank" rel="noopener">Richard Bläse</a>)<details class="spoiler "  id="spoiler-2">
   <summary class="cursor-pointer">Abstract</summary>
   <div class="rounded-lg bg-neutral-50 dark:bg-neutral-800 p-2">
-    This study explores the dynamics of gender bias in expert panels using data from universitybased
+    This study explores the dynamics of gender bias in expert panels using data from university-based
 startup-pitching contexts. Experts on these panels are primarily professional investors and assess
 a series of startups to determine contest winners. Our results indicate evidence for peer effects among
 such panels. First, we find that in-group bias with respect to gender in evaluations depends on the
