--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!-- This site was created with Hugo Blox. https://hugoblox.com -->
-<!-- Last Published: November 21, 2024 --><html lang="en-us" dir="ltr"
+<!-- Last Published: November 22, 2024 --><html lang="en-us" dir="ltr"
       data-wc-theme-default="system">
   
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
@@ -1145,7 +1145,7 @@ for gender biases.
 </ul>
 <h4 id="work-in-progress">Work in progress</h4>
 <ul>
-<li>It’s a match! Team composition and performance in innovation-related tasks (with <a href="https://www.joshgraffzivin.com/about" target="_blank" rel="noopener">Joshua Graff-Zivin</a>)<details class="spoiler "  id="spoiler-3">
+<li>It’s a match! Team composition and performance in innovation-related tasks (with <a href="https://www.joshgraffzivin.com/about" target="_blank" rel="noopener">Joshua Graff-Zivin</a>)[draft in preparation]<details class="spoiler "  id="spoiler-3">
   <summary class="cursor-pointer">Abstract</summary>
   <div class="rounded-lg bg-neutral-50 dark:bg-neutral-800 p-2">
     We provide causal evidence of the effect of social connections on team formation preferences
@@ -1159,7 +1159,7 @@ outcomes. Our findings imply that self-formed teams may be configured sub-optima
 biased by social connections.
   </div>
 </details></li>
-<li>Group decisions (with <a href="https://www.alexchan.net/" target="_blank" rel="noopener">Alex Chan</a> and <a href="https://ockenfels.uni-koeln.de/de/profil/melisa-kurtis" target="_blank" rel="noopener">Melisa Kurtis</a>)<details class="spoiler "  id="spoiler-4">
+<li>Group decisions (with <a href="https://www.alexchan.net/" target="_blank" rel="noopener">Alex Chan</a> and <a href="https://ockenfels.uni-koeln.de/de/profil/melisa-kurtis" target="_blank" rel="noopener">Melisa Kurtis</a>)[draft in preparation]<details class="spoiler "  id="spoiler-4">
   <summary class="cursor-pointer">Abstract</summary>
   <div class="rounded-lg bg-neutral-50 dark:bg-neutral-800 p-2">
     Group decision-making is crucial in economic decisions, such as in corporate boards, research
@@ -1174,7 +1174,7 @@ bias the group’s estimation towards their own priors, but first speakers with 
 to more accurate group estimations.
   </div>
 </details></li>
-<li>The effect of advice on self-evaluation(with <a href="https://www.inec.uni-hannover.de/de/schroeder" target="_blank" rel="noopener">Marina Schröder</a>)<details class="spoiler "  id="spoiler-5">
+<li>The effect of advice on self-evaluation (with <a href="https://www.inec.uni-hannover.de/de/schroeder" target="_blank" rel="noopener">Marina Schröder</a>)[draft in preparation]<details class="spoiler "  id="spoiler-5">
   <summary class="cursor-pointer">Abstract</summary>
   <div class="rounded-lg bg-neutral-50 dark:bg-neutral-800 p-2">
     We experimentally examine how different advice formats affect self-evaluations. We find
@@ -1187,7 +1187,7 @@ advice by men. Thus, while reactive advice promotes high-performing women when p
 are accurate, it disproportionately harms them when misclassified.
   </div>
 </details></li>
-<li>The effect of affirmative action on self-promotion (with <a href="https://www.inec.uni-hannover.de/de/schroeder" target="_blank" rel="noopener">Marina Schröder</a>)<details class="spoiler "  id="spoiler-6">
+<li>The effect of affirmative action on self-promotion (with <a href="https://www.inec.uni-hannover.de/de/schroeder" target="_blank" rel="noopener">Marina Schröder</a>)[piloting]<details class="spoiler "  id="spoiler-6">
   <summary class="cursor-pointer">Abstract</summary>
   <div class="rounded-lg bg-neutral-50 dark:bg-neutral-800 p-2">
     Prior literature has shown that affirmative action can affect effort choices, investments tournament
