--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!-- This site was created with Hugo Blox. https://hugoblox.com -->
-<!-- Last Published: November 22, 2024 --><html lang="en-us" dir="ltr"
+<!-- Last Published: January 3, 2025 --><html lang="en-us" dir="ltr"
       data-wc-theme-default="system">
   
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
@@ -893,7 +893,7 @@
     <div class="pt-2 justify-content-center prose prose-slate dark:prose-invert">
       <div class="bio-text" >
         <div style="font-size: calc(1em * 1.2) !important">
-Hi, I'm PhD student at Leibniz University Hannover. I use empirical methods to study distortions emerging in the generation and evaluation of innovative ideas, with a focus on diversity and gender bias. I employ <a href="/wit/">innovative experimental designs</a> in large-scale experiments. <a href="/paper/">My research</a> offers guidance for organizations and policy makers on designing incentives and decision-making processes to foster innovation.</div>
+Hi, I'm PhD student at Leibniz University Hannover. I use empirical methods to study distortions in the generation and evaluation of innovative ideas, focusing on diversity and gender bias. I employ <a href="/wit/">innovative experimental designs</a> in large-scale experiments. <a href="/paper/">My research</a> offers guidance for organizations and policy makers on designing incentives and decision-making processes to foster innovation.</div>
 <br>
       </div>
     </div>
@@ -1117,7 +1117,7 @@ can even eliminate pre-existing gender bias when no other performance signals ar
   </div>
 </details></li>
 <li>Piece-rate incentives and idea generation - An experimental analysis (with Katharina Laske and <a href="https://www.inec.uni-hannover.de/de/schroeder" target="_blank" rel="noopener">Marina Schröder</a>)
-<a href="/wit/">Link to the word illustration task (WIT)</a><a href="/uploads/IncentivesForIdeas_LaskeRoemerSchroeder.pdf">[pdf]</a><details class="spoiler "  id="spoiler-1">
+<a href="/wit/">Link to the word illustration task (WIT)</a><a href="/uploads/IncentivesForIdeas_LaskeRoemerSchroeder.pdf">[pdf]</a> (under review)<details class="spoiler "  id="spoiler-1">
   <summary class="cursor-pointer">Abstract</summary>
   <div class="rounded-lg bg-neutral-50 dark:bg-neutral-800 p-2">
     Understanding how organizational design affects idea generation is key to fostering innovation.
